fix: delete horizontal scroll in categories route (mobile)

--- a/src/components/product tile/productTile.scss
+++ b/src/components/product tile/productTile.scss
@@ -56,7 +56,7 @@
 @media (min-width: 320px) and (max-width: 900px) {
     .product-tile {
         margin: 10px auto;
-        width: 11rem;
+        width: 9.5rem;
         padding: 5px 10px;
     }
     .product-img-container {
