--- a/src/pages/categories/filters/filtersContainer.scss
+++ b/src/pages/categories/filters/filtersContainer.scss
@@ -34,7 +34,7 @@
 }
 @media (min-width: 320px) and (max-width: 1181px) {
     .category-container {
-        padding: 50px 0;
+        padding: 1rem 0;
     }
     .filter-container {
         display: none;
